tests/fixtures/errors/unknown_field.assura
// MUST REJECT A03005
// Accessing a nonexistent field on a list should be rejected.

contract UnknownField {
  input { xs: List<Int> }
  requires { xs.nonexistent > 0 }
}
